<resources>
    <string name="app_name">安卓串口调试助手</string>
    <string name="android_serial_port">串口调试</string>
    <string name="usb_serial_port">USB转串口调试</string>
    <string name="baud_rate">波特率</string>
    <string name="data_bits">数据位</string>
    <string name="stop_bits">停止位</string>
    <string name="check">校验</string>
    <string name="open_port">打开</string>
    <string name="port_list">串口列表</string>
    <string name="open_port_success">串口打开成功</string>
    <string name="close_port">关闭</string>

    <string name="provide_capture_function">提供数据截图功能</string>
    <string name="greater_than_ff">%s 大于0xff</string>
    <string name="is_not_hex">%s 不是十六进制数</string>
    <string name="send_data_is_null">要发送的十六进制数据为空</string>
    <string name="transcoding_failure">转换编码失败</string>
    <string name="choose_device">请选择设备</string>
    <string name="please_open_port_first">请先打开串口</string>
    <string name="clear_text">清空文本</string>
    <string name="data_capture">数据截图</string>
    <string name="send_data">发送数据</string>
    <string name="send_receive_test">数据收发测试</string>
    <string name="receive_data">接收数据</string>
    <string name="lose_data">丢失数据</string>
    <string name="abnormal_data">异常数据</string>
    <string name="start_test">开始测试</string>
    <string name="stop_test">停止测试</string>
    <string name="send_hex">HEX发送</string>
    <string name="receive_hex">HEX接收</string>
    <string name="receive_hint">准备接收数据</string>
    <string name="save_bitmap_success">数据截图保存成功</string>
    <string name="save_bitmap_failed">数据截图保存失败</string>
    <string name="receive_data_count">RECEIVE COUNT</string>
    <string name="send_data_hint">字符模式直接输入,如:Hello World,HEX模式用空格分割,如:1E 10 20 F0</string>
    <string name="open_port_fail">串口打开失败</string>
    <string name="serial_write_success">写入成功</string>
    <string name="serial_write_fail">写入失败</string>


    <string-array name="baud_rates">
        <item>50</item>
        <item>75</item>
        <item>110</item>
        <item>134</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
        <item>2000000</item>
        <item>2500000</item>
        <item>3000000</item>
        <item>3500000</item>
        <item>4000000</item>
    </string-array>
    <string-array name="data_bits">
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
    </string-array>
    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="parity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
