<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/baud_rate"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/sp_baud_rate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:entries="@array/baud_rates" />

    <LinearLayout
        android:id="@+id/usb_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/data_bits"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/sp_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/data_bits"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stop_bits"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/sp_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/stop_bits" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_parity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/check"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/sp_parity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:entries="@array/parity"/>

    <Button
        android:id="@+id/btn_open_or_close"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:text="@string/open_port"
        android:textSize="@dimen/text_size" />
</LinearLayout>